--- a/Assignment 1-aSOLVED.ipynb
+++ b/Assignment 1-aSOLVED.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,16 @@
      "text": [
       "3\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'or print the value instantly by {print(Count_Vowels(text))}'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -38,20 +48,18 @@
     "# Expected Output:\n",
     "3\n",
     "'''\n",
-    "text = \"Hello World\"\n",
-    "counter=0\n",
-    "for char in text:\n",
-    "    if char =='a' or char=='e' or char=='i' or char=='o' or char=='u':\n",
-    "        counter+=1\n",
-    "print(counter)"
+    "\n",
+    "def Count_Vowels(text):\n",
+    "    counter=0\n",
+    "    for char in text:\n",
+    "        if char =='a' or char=='e' or char=='i' or char=='o' or char=='u' or char =='A' or char=='E' or char=='I' or char=='O' or char=='U':\n",
+    "            counter+=1\n",
+    "    return counter\n",
+    "text = \"HEllO WOrld\"\n",
+    "c = Count_Vowels(text)\n",
+    "print(c)\n",
+    "'''or print the value instantly by {print(Count_Vowels(text))}'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -65,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "None\n"
      ]
     }
    ],
@@ -85,11 +93,17 @@
     "'''\n",
     "\n",
     "nums  = [3, 5, 2, 8, 1]\n",
-    "max = nums[0]\n",
-    "for i in nums:\n",
-    "    if max<i:\n",
-    "       max=i \n",
-    "print(max)"
+    "def find_max(nums):\n",
+    "    if(nums==[]):\n",
+    "        return None\n",
+    "    else:\n",
+    "        max = nums[0]\n",
+    "        for i in nums:\n",
+    "            if (max<i):\n",
+    "                max=i \n",
+    "        return max\n",
+    "m = find_max(nums)\n",
+    "print(m)"
    ]
   },
   {
@@ -116,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
